{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 30,
  "lineage": "28651c1a-497c-f10a-56f8-b835bc4d7e3d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0609186b60570e9c9",
            "arn": "arn:aws:ec2:ap-southeast-1:403343504867:instance/i-0e9c64f56d5fd8629",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e9c64f56d5fd8629",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c589ef65502436c0"
              }
            ],
            "primary_network_interface_id": "eni-0c589ef65502436c0",
            "private_dns": "ip-10-0-10-207.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.207",
            "public_ip": "13.250.52.199",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07a5a3899a1508032",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-001fe234a54e4956c",
            "tags": {
              "Name": "DevelopmentWebServer1"
            },
            "tags_all": {
              "Name": "DevelopmentWebServer1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-090251d00973f2ddd"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "403343504867",
            "id": "i-0e9c64f56d5fd8629",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.EC2instance_SG",
            "aws_subnet.dev_public_subnet",
            "aws_vpc.development_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:403343504867:internet-gateway/igw-0cea9c6a6f033efc2",
            "id": "igw-0cea9c6a6f033efc2",
            "owner_id": "403343504867",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "DevelopmentIGW"
            },
            "tags_all": {
              "Name": "DevelopmentIGW"
            },
            "vpc_id": "vpc-00ba2ced46046caf9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.development_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:403343504867:route-table/rtb-0f3cedb2295aa0fc6",
            "id": "rtb-0f3cedb2295aa0fc6",
            "owner_id": "403343504867",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cea9c6a6f033efc2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DevelopmentPublicRT"
            },
            "tags_all": {
              "Name": "DevelopmentPublicRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ba2ced46046caf9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "403343504867",
            "id": "rtb-0f3cedb2295aa0fc6",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.dev_igw",
            "aws_vpc.development_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004024302ccd5a35d",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0f3cedb2295aa0fc6",
            "subnet_id": "subnet-001fe234a54e4956c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.dev_igw",
            "aws_route_table.dev_public_rt",
            "aws_subnet.dev_public_subnet",
            "aws_vpc.development_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "EC2instance_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:403343504867:security-group/sg-090251d00973f2ddd",
            "description": "Allow HTTP and SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-090251d00973f2ddd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "EC2Instance_SG",
            "name_prefix": "",
            "owner_id": "403343504867",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00ba2ced46046caf9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "403343504867",
            "id": "sg-090251d00973f2ddd",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.development_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:403343504867:subnet/subnet-09366429ae7d8298a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09366429ae7d8298a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "403343504867",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "DevelopmentPrivateSubnet"
            },
            "tags_all": {
              "Name": "DevelopmentPrivateSubnet"
            },
            "vpc_id": "vpc-00ba2ced46046caf9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "403343504867",
            "id": "subnet-09366429ae7d8298a",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.development_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:403343504867:subnet/subnet-001fe234a54e4956c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001fe234a54e4956c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "403343504867",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "DevelopmentPublicSubnet"
            },
            "tags_all": {
              "Name": "DevelopmentPublicSubnet"
            },
            "vpc_id": "vpc-00ba2ced46046caf9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "403343504867",
            "id": "subnet-001fe234a54e4956c",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.development_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "development_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:403343504867:vpc/vpc-00ba2ced46046caf9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0eb349638cd3a273f",
            "default_route_table_id": "rtb-069885aa582874a93",
            "default_security_group_id": "sg-0fe49acab14535307",
            "dhcp_options_id": "dopt-09a12c382eee7b9e5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00ba2ced46046caf9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-069885aa582874a93",
            "owner_id": "403343504867",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "DevelopmentVPC"
            },
            "tags_all": {
              "Name": "DevelopmentVPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "403343504867",
            "id": "vpc-00ba2ced46046caf9",
            "region": "ap-southeast-1"
          }
        }
      ]
    }
  ]
}